<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".presentation.views.activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/top_profile_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="360dp"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/all"
                            android:src="@drawable/back_square_blue"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/perfil"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_user"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/all" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/title_username"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/perfil"
                        app:layout_constraintStart_toStartOf="@+id/perfil"
                        app:layout_constraintTop_toBottomOf="@+id/perfil" />

                    <TextView
                        android:id="@+id/txt_email_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Email"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/username"
                        app:layout_constraintStart_toStartOf="@+id/username"
                        app:layout_constraintTop_toBottomOf="@+id/username" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_email_show">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:id="@+id/lnl_change_password"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/grey_background"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp"
                                    android:background="@drawable/circle_background">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ic_change_pass"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        android:contentDescription="@string/all"
                                        tools:ignore="TooDeepLayout" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/txt_email_change_opt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/title_change_password"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lnl_log_out"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/grey_background"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp"
                                    android:background="@drawable/circle_background">

                                    <ImageView
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ic_log_out"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        android:contentDescription="@string/all" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/txt_settings"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/log_out"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lnl_delete_account"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.3333"
                                android:background="@drawable/grey_background"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="12dp"
                                    android:background="@drawable/circle_background">

                                    <ImageView
                                        android:id="@+id/imageView3"
                                        android:layout_width="50dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ic_delete"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        android:contentDescription="@string/all"/>

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/title_delete_account"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/hint_password"
                                android:textColor="#182693"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/txt_password_change"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/hint_change"
                                android:textAlignment="viewEnd"
                                android:textColor="#5b5b5b"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:background="#d9d9d9" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/hint_email"
                                android:textColor="#182693"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/txt_email_change"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                tools:text="123@irf.vom"
                                android:textAlignment="viewEnd"
                                android:textColor="#5b5b5b"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHome"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/title_home"
                android:textSize="18sp"
                android:textColor="@color/color_accent_container"
                app:cornerRadius="16dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>